--- a/chapter4.ipynb
+++ b/chapter4.ipynb
@@ -163,52 +163,155 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 12) Implement batch gradient descent with early stopping for softmax regression without using Scikit-Learn, only Numpy. Use it on a classification taske such as the iris dataset."
+    "### 12) Implement batch gradient descent with early stopping for softmax regression without using Scikit-Learn, only Numpy. Use it on a classification task such as the iris dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
     "class softmax_classification:\n",
-    "    def __init__(self, X, y):\n",
+    "    def __init__(self, X, y, epochs = 5000, eta = 0.5):\n",
     "        self.X = X\n",
+    "        #add columns of 1s for bias term\n",
+    "        self.X = np.c_[np.repeat(1, self.X.shape[0]), self.X]\n",
     "        self.y = y\n",
-    "        self.m = X.shape[0] #observations (instances)\n",
-    "        self.n = X.shape[1] #parameters\n",
     "        self.K = len(np.unique(self.y)) #distinct label classes\n",
-    "        self.Theta = np.random.randn(K,n) #1 parameter row for each possible label\n",
+    "        self.y_onehot = np.zeros((self.X.shape[0], self.K))\n",
+    "        self.y_onehot[np.arange(self.X.shape[0]), self.y] = 1 #one-hot encode y\n",
+    "        #Standardize X values\n",
+    "        self.meanX = np.mean(self.X[:,1:], axis = 0)\n",
+    "        self.stdX = np.std(self.X[:,1:], axis = 0)\n",
+    "        self.X[:,1:] = (self.X[:,1:] - self.meanX)/self.stdX\n",
+    "        #split into training and validation\n",
+    "        train_size = round(0.8 * self.X.shape[0])\n",
+    "        all_indices = np.array(range(self.X.shape[0]))\n",
+    "        train_indices = np.random.choice(all_indices, size = train_size, replace = False)\n",
+    "        valid_indices = np.setdiff1d(all_indices, train_indices)\n",
+    "        self.X_train = self.X[train_indices]\n",
+    "        self.X_valid = self.X[valid_indices]\n",
+    "        self.y_train = self.y[train_indices]\n",
+    "        self.y_valid = self.y[valid_indices]\n",
+    "        self.y_onehot_train = self.y_onehot[train_indices]\n",
+    "        self.y_onehot_valid = self.y_onehot[valid_indices]\n",
+    "        #additional parameters and matrixes\n",
+    "        self.epochs = epochs\n",
+    "        self.eta = eta\n",
+    "        self.m = self.X_train.shape[0] #number of observations (instances)\n",
+    "        self.n = self.X_train.shape[1] #number of parameters\n",
+    "        self.Theta = np.random.randn(self.n,self.K) #1 parameter row for each possible label\n",
+    "        self.scores = np.zeros(shape = (self.m, self.K)) #matrix to save scores for each instance\n",
+    "        self.probs = np.zeros(shape = (self.m, self.K)) #matrix to save probabilities for each instance\n",
+    "        self.gradients = np.zeros(shape = (self.m, self.K)) #initialize gradients\n",
     "\n",
-    "\n",
+    "       \n",
     "    #Calculate score for each possible label\n",
-    "    def softmax_score(self):\n",
-    "        #matrix to save scores for each instance\n",
-    "        scores = np.zeros(shape = (self.K,self.m))\n",
-    "        for i in range(self.K):\n",
-    "            scores[i,:] = np.matmul(self.X, self.Theta[i].T)\n",
-    "\n",
-    "        return scores\n",
+    "    def softmax_score(self, X_use, Theta_use):\n",
+    "        scores = np.matmul(X_use, Theta_use)\n",
+    "        return(scores)\n",
     "\n",
     "    #softmax function to calculate probabilities\n",
-    "    def softmax_function(scores):\n",
+    "    def softmax_function(self, scores_use):\n",
     "        #exponentiate scores\n",
-    "        scores_exp = np.exp(scores)\n",
+    "        scores_exp = np.matrix(np.exp(scores_use))\n",
     "        #divide by row sum\n",
-    "        probs = scores_exp/scores_exp.sum(axis = 0)\n",
-    "        return probs\n",
+    "        probs = scores_exp/scores_exp.sum(axis = 1)\n",
+    "        return(probs)\n",
+    "    \n",
+    "    #calculate gradients\n",
+    "    def calc_gradient(self, probs_use):\n",
+    "        error = probs_use - self.y_onehot_train\n",
+    "        grad = (1/self.m)*np.matmul(self.X_train.T, error)\n",
+    "        return(grad)\n",
+    "\n",
+    "    #update weights\n",
+    "    def update_weights(self):\n",
+    "        self.Theta = self.Theta - self.eta*self.gradients\n",
+    "\n",
+    "    #Cross entropy-loss function\n",
+    "    def cross_entropy_loss(self):\n",
+    "        valid_scores = self.softmax_score(X_use = self.X_valid, Theta_use = self.Theta)\n",
+    "        probs_valid = self.softmax_function(scores_use = valid_scores)\n",
+    "        loss = np.multiply(self.y_onehot_valid, np.log(probs_valid)).sum(axis = 1).mean() * -1/(self.m)\n",
+    "        return(loss)\n",
+    "\n",
+    "    #Predict method\n",
+    "    def predict(self, X_new):\n",
+    "        #add columns of 1s for bias term\n",
+    "        X_new_standard = (X_new - self.meanX)/self.stdX\n",
+    "        X_new_standard = np.c_[np.repeat(1, X_new_standard.shape[0]), X_new_standard]\n",
+    "        new_scores = self.softmax_score(X_use = X_new_standard, Theta_use = self.Theta)\n",
+    "        new_probs = self.softmax_function(scores_use = new_scores)\n",
+    "        return(new_probs.argmax(axis = 1))\n",
     "\n",
     "\n",
+    "    #fit\n",
+    "    def fit(self):\n",
+    "        min_loss = float('inf')\n",
+    "        for count in range(self.epochs):\n",
+    "            self.scores = self.softmax_score(X_use = self.X_train, Theta_use = self.Theta)\n",
+    "            self.probs = self.softmax_function(scores_use = self.scores)\n",
+    "            self.gradients = self.calc_gradient(probs_use = self.probs)\n",
+    "            self.update_weights()\n",
+    "\n",
+    "            #calculate loss\n",
+    "            loss = self.cross_entropy_loss()\n",
+    "            if loss < min_loss:\n",
+    "                min_loss = loss\n",
+    "                best_Theta = self.Theta\n",
+    "\n",
+    "            #Define best model as the one with minimum loss\n",
+    "            self.Theta = best_Theta\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we should be able to open iris dataset and train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model test accuracy is: 96.7 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "iris = load_iris(as_frame = True)\n",
+    "X = iris.data[[\"petal length (cm)\", \"petal width (cm)\"]].values\n",
+    "y = iris.target\n",
+    "\n",
+    "\n",
+    "#split into train and test\n",
+    "train_size = round(0.8 * X.shape[0])\n",
+    "all_indices = np.array(range(X.shape[0]))\n",
+    "train_indices = np.random.choice(all_indices, size = train_size, replace = False)\n",
+    "test_indices = np.setdiff1d(all_indices, train_indices)\n",
+    "X_train = X[train_indices]\n",
+    "X_test = X[test_indices]\n",
+    "y_train = np.array(y[train_indices])\n",
+    "y_test = np.array(y[test_indices])\n",
+    "\n",
+    "#Fit the model\n",
+    "my_model = softmax_classification(X_train, y_train)\n",
+    "my_model.fit()\n",
+    "\n",
+    "#Print accuracy\n",
+    "predictions = my_model.predict(X_test).T\n",
+    "accuracy = (predictions == y_test).mean()\n",
+    "print(f\"Model test accuracy is: {round(accuracy,3)*100} %\")\n",
     "\n"
    ]
   },
@@ -216,47 +319,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.11920292202211755)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[0.11920292, 0.11920292],\n",
-       "        [0.88079708, 0.88079708]])"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "teste = np.matrix([[1,2], [3,4]])\n",
-    "def softmax_function(scores):\n",
-    "        #exponentiate scores\n",
-    "        scores_exp = np.exp(scores)\n",
-    "        #divide by row sum\n",
-    "        probs = scores_exp/scores_exp.sum(axis = 0)\n",
-    "        return probs\n",
-    "softmax_function(teste)"
-   ]
   }
  ],
  "metadata": {
