up to chapter 8

--- a/chapter4.ipynb
+++ b/chapter4.ipynb
@@ -168,12 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "class softmax_classification:\n",
+    "    \"\"\"\n",
+    "    Trains and predicts a softmax model\n",
+    "    \"\"\"\n",
     "    def __init__(self, X, y, epochs = 5000, eta = 0.5):\n",
     "        self.X = X\n",
     "        #add columns of 1s for bias term\n",
@@ -314,13 +317,6 @@
     "print(f\"Model test accuracy is: {round(accuracy,3)*100} %\")\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
